Fix text in activity page for overflow in table rows for non parsed user activity actions (#1132)
* Fix text in activity page for overflow in table rows for non parsed user activities
* Fixes #1128
* add div tag surrounded label and add `overflow-x: auto` css style properties to child to fix issue with firefox

--- a/src/client/activity/UserActivityActions.less
+++ b/src/client/activity/UserActivityActions.less
@@ -102,9 +102,16 @@
       width: auto;
       border-top: @table-border;
       overflow-x: auto;
-      padding: 11px;
       white-space: nowrap;
-      display: block;
+
+      > div {
+        padding: 11px;
+      }
+
+      > pre {
+        padding: 11px;
+        overflow-x: auto;
+      }
     }
 
     &__label {
@@ -114,8 +121,12 @@
       border-top: @table-border;
       font-weight: bold;
       overflow-x: auto;
-      padding: 11px;
-      display: block;
+      width: 30%;
+
+      > div {
+        padding: 11px;
+        overflow-x: auto;
+      }
     }
   }
 
